Final tweaks to the paper

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -43,15 +43,15 @@
 \maketitle
 
 \begin{abstract} 
-This paper describes a system in which populations surrounding cell towers can easily be estimated. The system is designed with the objective that result data could be used to improve human mobility models. The project was conducted as a two credit-hour independent study for the computer science PhD student, Thyago Mota, to assist with his mobility model research at the Colorado School of Mines. The population estimation system operates by partitioning a geographic area into various segments, surrounding a provided set of cell tower coordinates, using a Voronoi tessellation. This generated tessellation is used in conjunction with NASA's large Gridded Population of the World dataset, which provides population estimates for the entire world on an approximately five kilometer square grid, to return a per cell tower population estimate. The system relies on efficient programing due to the large size of the datasets being utilized. To accomplish the system's objectives, a solution was implemented as a collection of programs written in JavaScript, Ruby, and Python. Results and potential improvements to the system are also discussed.
+This paper describes a system by which human populations can be easily estimated by utilizing surrounding cell towers. The system is designed with the objective that result data could be used to improve human mobility models. The project was conducted as a two credit-hour independent study for the computer science PhD student, Thyago Mota, to assist with his mobility model research at the Colorado School of Mines. The population estimation system operates by partitioning a geographic area into various segments, surrounding a provided set of cell tower coordinates, using a Voronoi tessellation. This generated tessellation is used in conjunction with NASA's large Gridded Population of the World (GPW) dataset, which provides population estimates for the world on an approximate five kilometer square grid, to generate a per cell tower population estimate. The system relies on efficient programing due to the large size of the datasets being utilized. To accomplish the system's objectives, a solution was implemented as a collection of programs written in JavaScript, Ruby, and Python. Results and potential improvements to the system are also discussed.
 \end{abstract}
 
 \section{Introduction}
 The development of human mobility models has been an area of intense research over the past several years. Human mobility models have a wide variety of applications, including improved automation, occupancy prediction, and improved public transportation network design. Recently, cell tower log data has been utilized to gain new insight into human mobility models with high temporal accuracy. Such models could be improved by having set estimates of populations surrounding each cell tower.
 
-This project aims to accurately estimate cell tower surrounding populations using cell tower locations as inputs and NASA's Gridded Population of the World dataset. A Voronoi tessellation is run on the input location data to segment a geographic area into various polygons, each of which has a cell tower at its center. Such a Voronoi tessellation is a good representation of the distribution of people per cell tower since each edge within a polygon is inherently an orthogonal bisector of the line between two cell towers.
+This project aims to accurately estimate cell tower surrounding populations using cell tower locations as inputs and NASA's Gridded Population of the World dataset. A Voronoi tessellation is run on the input location data to segment a geographic area into various polygons, each of which has a cell tower at its center. A Voronoi tessellation is a good representation of the distribution of people per cell tower, since each edge within a polygon is inherently an orthogonal bisector of the line between two cell towers.
 
-Overall, the system appears to function adequately. However, there are several improvements that can be introduced into the system to improve performance due to the highly parallelizable nature of the estimation problem. Future research in this area will involve comparison of this system's results with population estimates gathered from call log data and population estimates from Twitter to evaluate each method's efficacy.
+Overall, the system appears to function adequately. However, there are several improvements that can be introduced into the system to enhance performance, due to the highly parallel nature of the estimation problem. Future research in this area will involve comparison of this system's results with population estimates gathered from call log data and population estimates from Twitter to evaluate each method's efficacy.
 
 \section{Related Work}
 \cite{motahari2012} describes a framework for estimating wireless subscriber populations within cellular carriers using a pattern regularity-based system. Such a system provides data that can help to improve urban mobility models. The researchers were able to test the system on CDMA EV-DO cellular data usage data and resulted in high-accuracy subscriber estimations.
@@ -91,7 +91,7 @@ The project described in this paper has been broken into various pieces to impro
 Two empirical datasets were chosen for this project: An Ivory Coast dataset consisting of 1238 cell tower locations, and an Abidjan dataset consisting of 383 cell tower locations, a small subset of the Ivory Coast dataset that focusses around its largest city, Abidjan. The Ivory Coast was chosen due to the free availability of cell tower information, which is inaccessible within the United States.
 
 \subsection{Gridded Population of the World Processing}
-Substantial processing is performed on the GPW data prior to use within the estimation program using a Python script with the $\texttt{shapely}$ module. The Esri grid format metadata (Figure \ref{fig:esri}) is first read from the GPW datafile. In conjunction with an outline geometry file, data is extracted from the GPW file and output to a CSV file in longitude, latitude, population format. This processing removes unnecessary, outlying data points from the GPW data, ultimately reducing the 1.3GB Ivory Coast GPW raster file to an easily parsable, 780MB CSV file.
+Substantial processing is performed on the GPW data prior to use within the estimation program using a Python script with the $\texttt{shapely}$ module. The Esri grid format metadata (Figure \ref{fig:esri}) is first read from the GPW datafile, in conjunction with an outline geometry file. Data is extracted from the GPW file and output to a CSV file in longitude, latitude, population format. This processing removes unnecessary, outlying data points from the GPW data, ultimately reducing the 1.3GB Ivory Coast GPW raster file to an easily parsable, 780MB CSV file.
 
 
 \subsection{Voronoi Tessellation}
@@ -115,7 +115,7 @@ A Voronoi tessellation is a method of dividing an n-dimensional space, such as a
 
 The JavaScript Topology Suite (JSTS) \cite{jsts} was selected for this project due to its ease of use, ability to process large sets of points, and integration with OpenLayers \cite{openlayers}. JSTS is a JavaScript implementation of the widely used Java Topology Suite (JTS).
 
-The Voronoi tessellation component of the system is written in JavaScript and utilizes JSTS to calculate the Voronoi polygons for a set of cell tower coordinates which are then overlaid on a Google map using OpenLayers. The Voronoi tessellations for both datasets (Figure \ref{fig:ivorycoastvoronoi} and Figure \ref{fig:abidjanvoronoi}) are calculated quickly, in under one second. The resultant tessellation is output as a plain-text list of identifiers and polygons, each in Well Known Text (WKT) format. This output is then converted into an easily parsable CSV file using regular expressions in a Ruby script.
+The Voronoi tessellation component of the system is written in JavaScript and utilizes JSTS to calculate the Voronoi polygons for a set of cell tower coordinates which are then overlaid on a Google map using OpenLayers. The Voronoi tessellations for both datasets (Figure \ref{fig:ivorycoastvoronoi} and Figure \ref{fig:abidjanvoronoi}) are calculated in under one second. The resultant tessellation is output as a plain-text list of identifiers and polygons, each in Well Known Text (WKT) format. This output is then converted into an easily parsable CSV file using regular expressions in a Ruby script.
 
 
 \subsection{Population Estimation}
@@ -128,10 +128,10 @@ The system can run on empirical datasets with results that concur with measured 
 
 There is substantial future research that can be performed to add features and improve the performance of this system. Currently, all population estimation tasks are performed on one single thread. Due to the easily parallelizable nature of the estimation algorithm, the population estimation program could be modified to take advantage of the several processor cores available on the host machine to significantly reduce run times.
 
-There is room for substantial future research to determine the validity and usefulness of the generated population estimates. Other population estimation methods, including those produced from analyzing call log data and geotagged tweets from Twitter, can be compared with the method presented in this paper to evaluate each method's effectiveness and applicability to human mobility models.
+There is room for future research to determine the validity and usefulness of the generated population estimates. Other population estimation methods, including those produced from analyzing call log data and geotagged tweets from Twitter, can be compared with the method presented in this paper to evaluate each method's effectiveness and applicability to human mobility models.
 
 \section{Summary}
-In the hopes of facilitating the improvement of human mobility models, a system has been developed for Colorado School of Mines PhD student, Thyago Mota, that is capable of estimating the populations surrounding cell towers. This system applies a Voronoi tessellation on a set of cell tower coordinate points to segment a local polygon for each datapoint. These Voronoi polygons are then used in conjunction with a Gridded Population of the World dataset and an outline geometry of the region of interest to generate a population estimate for each cell tower.
+In the hopes of facilitating the improvement of human mobility models, a system has been developed for Colorado School of Mines PhD student, Thyago Mota, that is capable of estimating human populations in surrounding cell towers. This system applies a Voronoi tessellation on a set of cell tower coordinate points to segment a local polygon for each datapoint. These Voronoi polygons are then used in conjunction with a Gridded Population of the World dataset and an outline geometry of the region of interest to generate a population estimate for each cell tower.
 
 The system has been applied to an Ivory Coast dataset and an Abidjan dataset, and successfully generates estimates that, when aggregated, appear to be correct. Further research in this area will involve the analysis and comparison of these estimates with additional population estimation methods, including the use of call log data and geotagged Twitter messages.
 
